<resources>
    <string name="app_name">Auto Update Test 1</string>
    <string name="update_notification_title">Auto Update App</string>
    <string name="update_notification_content">New version is available.\nClick to download.</string>
    <string name="notification_update_channel_id">com.example.autoupdatetest1</string>
    <string name="notification_update_channel_name">auto_update_test</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="updates">Updates</string>
    <string name="settings">Settings</string>
    <string name="currentVersion">Version: %1$s</string>
    <string name="new_version_available">A new version of %1$s App (%2$s) is available.\nDo you want to install it?</string>
    <string name="new_version_not_available">You installed the latest version of %1$s App.</string>
    <string name="check_for_updates">Check For Updates</string>
    <string name="no">No</string>
    <string name="dont_show_again">Don\'t Show Again</string>
    <string name="start_downloading">Start Downloading</string>
    <string name="install">Install</string>
    <string name="update_settings">Update Settings</string>
    <string name="setting_update_header">Auto Update Settings</string>
    <string name="settings_update_enable_disable_auto_check_update">Automatically check for updates</string>
    <string name="settings_update_enable_disable_notification">Receive notifications on new updates</string>
    <string name="settings_update_frequency">Check for updates every:</string>
    <string name="settings_update_time">Check for updates at:</string>
    <string name="settings_update_notification_time">Notification Time</string>
    <string name="last_check">Last check on %1$s</string>

</resources>