<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatesActivity"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/current_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_update_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:gravity="center"
        android:layout_marginTop="32dp"
        >

        <ProgressBar
            android:id="@+id/check_for_updates_pbar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

<!--        <TextView-->
<!--            android:id="@+id/update_status"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="You have the latest version of the pRMT App."-->
<!--            />-->

        <Button
            android:id="@+id/check_for_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_for_updates"
            />

        <TextView
            android:id="@+id/last_check_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_check"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/update_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_update_linearLayout"
        android:layout_marginTop="32dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/update_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />

        <Button
            android:id="@+id/dont_show_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_show_again"
            android:visibility="gone"/>

        <Button
            android:id="@+id/start_downloading_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_downloading" />

        <!--        <TextView-->
        <!--            android:id="@+id/last_check_status"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="Last check on 12:00, December 22, 2020"-->
        <!--            />-->
    </LinearLayout>


    <LinearLayout
        android:id="@+id/download_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/update_linearLayout"
        android:layout_marginTop="32dp"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/install_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/install"
            android:visibility="gone"/>
    </LinearLayout>


    <!--    <Button-->
<!--        android:id="@+id/cancel_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Cancel"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

<!--    <Button-->
<!--        android:id="@+id/dont_show_again_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Don't Show Again"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cancel_button" />-->

<!--    <Button-->
<!--        android:id="@+id/start_downloading_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Start Downloading"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/dont_show_again_button" />-->

<!--    <Button-->
<!--        android:id="@+id/update_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Update"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/start_downloading_button" />-->

</androidx.constraintlayout.widget.ConstraintLayout>